--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -23,6 +23,7 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:text="@string/houses"
+                android:testsize="40sp"
                 android:textColor="@android:color/white" />
         </LinearLayout>
 
