--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,8 +22,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
+                android:textSize="50sp"
                 android:text="@string/houses"
-                android:testsize="40sp"
+                android:id="@+id/texthouse"
                 android:textColor="@android:color/white" />
         </LinearLayout>
 
